Fixed some styling issues on mobile side

--- a/mobile/Stylesheets/report.css
+++ b/mobile/Stylesheets/report.css
@@ -5,4 +5,10 @@ html {
     -o-background-size: cover;
     background-size: cover;
     font-size: 3vw;
+    overflow-y: scroll;
+}
+
+html,
+body {
+    overflow-y: scroll;
 }
